# ZwiftConverter

./: .cproject  .gitignore  .project  Aspire.txt  Bricolage.txt  CMakeLists.txt  Escalation.txt  Readme.md  Zwifter Default.launch  start_cmake.bat  start_cmake.sh
TDDW/: Aspire.txt
input/: Aspire.txt  Bricolage.txt  Cucumber.txt  Escalation.txt  Ham_Sandwich.txt  Kirizuma.txt  Melange.txt  Method.txt  Mosaic.txt  Orange_Unicorn.txt  Purple_Unicorn.txt  Red_unicorn.txt  Spaded_Sweetie.txt  Tenacity.txt  Thew.txt  Tine.txt  Uphill_Battle.txt
src/: Zwifter.cpp  Zwifter.hpp
